--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="service-section section">
         <div class="container">
           <h1 class="service-text">
-            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+            EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU
           </h1>
           <button type="button" class="service-button">Zamów usługę</button>
         </div>
@@ -357,12 +357,11 @@
     </main>
     <footer>
       <div class="container">
-        <ul>
-          <li>
+          <div>
             <a href="index.html" class="main-logo"
-          >Web<span class="color-white">Studio</span></a
-        >
-        <address class="font-normal">
+              >Web<span class="color-white">Studio</span>
+            </a>
+            <address class="font-normal">
           <ul>
             <li class="footer-address">m. Warszawa, Aleje Jerozolimskie 21</li>
             <li>
@@ -377,8 +376,8 @@
             </li>
           </ul>
         </address>
-        </li>
-        <li>
+        </div>
+        <div>
           <h3 class="social-link-header">dołącz do nas</h3>
           <ul class="social-link-flex">
             <li>
@@ -410,7 +409,7 @@
               </a>
             </li>
           </ul>
-        </li>
+        </div>
       </div>
     </footer>
   </body>
