--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,7 @@
     <header>
       <div class="container flex-list">
         <nav class="flex-list">
-          <a href="index.html" class="main-logo"
-            >Web<span class="color-black">Studio</span></a
-          >
+          <a href="index.html" class="main-logo">Web<span class="color-black">Studio</span></a>
           <ul>
             <li><a href="index.html" class="nav-links">Agencja</a></li>
             <li><a href="portfolio.html" class="nav-links">Portfolio</a></li>
@@ -79,15 +77,8 @@
               <p class="portfolio-desription-section">Strona internetowa</p>
             </li>
             <li>
-              <img
-                src="images/portfolio_2.jpg"
-                alt="Koszykarze z piłką"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-description-name">
-                Grafika New Orlean vs Golden Star
-              </h3>
+              <img src="images/portfolio_2.jpg" alt="Koszykarze z piłką" width="370" height="294" />
+              <h3 class="portfolio-description-name">Grafika New Orlean vs Golden Star</h3>
               <p class="portfolio-desription-section">Dizajn</p>
             </li>
             <li>
@@ -101,22 +92,12 @@
               <p class="portfolio-desription-section">Aplikacja</p>
             </li>
             <li>
-              <img
-                src="images/portfolio_4.jpg"
-                alt="Słuchawki nauszne"
-                width="370"
-                height="294"
-              />
+              <img src="images/portfolio_4.jpg" alt="Słuchawki nauszne" width="370" height="294" />
               <h3 class="portfolio-description-name">Projekt Prime</h3>
               <p class="portfolio-desription-section">Marketing</p>
             </li>
             <li>
-              <img
-                src="images/portfolio_5.jpg"
-                alt="Dwa pudełka"
-                width="370"
-                height="294"
-              />
+              <img src="images/portfolio_5.jpg" alt="Dwa pudełka" width="370" height="294" />
               <h3 class="portfolio-description-name">Projekt Boxes</h3>
               <p class="portfolio-desription-section">Aplikacja</p>
             </li>
@@ -127,30 +108,16 @@
                 width="370"
                 height="294"
               />
-              <h3 class="portfolio-description-name">
-                Inspiration has no Borders
-              </h3>
+              <h3 class="portfolio-description-name">Inspiration has no Borders</h3>
               <p class="portfolio-desription-section">Strona internetowa</p>
             </li>
             <li>
-              <img
-                src="images/portfolio_7.jpg"
-                alt="Otwarta książka"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-description-name">
-                Magazyn Limited Edition
-              </h3>
+              <img src="images/portfolio_7.jpg" alt="Otwarta książka" width="370" height="294" />
+              <h3 class="portfolio-description-name">Magazyn Limited Edition</h3>
               <p class="portfolio-desription-section">Dizajn</p>
             </li>
             <li>
-              <img
-                src="images/portfolio_8.jpg"
-                alt="Tag na sznurku"
-                width="370"
-                height="294"
-              />
+              <img src="images/portfolio_8.jpg" alt="Tag na sznurku" width="370" height="294" />
               <h3 class="portfolio-description-name">Projekt LAB</h3>
               <p class="portfolio-desription-section">Marketing</p>
             </li>
@@ -169,26 +136,53 @@
       </section>
       <footer>
         <div class="container">
-          <a href="index.html" class="main-logo"
-            >Web<span class="color-white">Studio</span></a
-          >
-          <address class="font-normal">
-            <ul>
-              <li class="footer-address">
-                m. Warszawa, Aleje Jerozolimskie 21
+          <div>
+            <a href="index.html" class="main-logo">Web<span class="color-white">Studio</span> </a>
+            <address class="font-normal">
+              <ul>
+                <li class="footer-address">m. Warszawa, Aleje Jerozolimskie 21</li>
+                <li>
+                  <a href="mailto:info@devstudio.com" class="footer-links">info@devstudio.com</a>
+                </li>
+                <li>
+                  <a href="tel:+48 111 111 111" class="footer-links">+48 111 111 111</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div>
+            <h3 class="social-link-header">dołącz do nas</h3>
+            <ul class="social-link-flex">
+              <li>
+                <a href="#" class="social-link"
+                  ><svg class="social-link-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="mailto:info@devstudio.com" class="footer-links"
-                  >info@devstudio.com</a
-                >
+                <a href="#" class="social-link"
+                  ><svg class="social-link-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <a href="tel:+48 111 111 111" class="footer-links"
-                  >+48 111 111 111</a
-                >
+                <a href="#" class="social-link"
+                  ><svg class="social-link-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-link"
+                  ><svg class="social-link-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
       </footer>
     </main>
