--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <header>
       <div class="container flex-list">
         <nav class="flex-list">
-          <a href="index.html" class="main-logo"
-            >Web<span class="color-black">Studio</span></a
-          >
+          <a href="index.html" class="main-logo">Web<span class="color-black">Studio</span></a>
           <ul>
             <li><a href="index.html" class="nav-links">Agencja</a></li>
             <li><a href="portfolio.html" class="nav-links">Portfolio</a></li>
@@ -50,9 +48,7 @@
     <main>
       <div class="service-section section">
         <div class="container">
-          <h1 class="service-text">
-            EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU
-          </h1>
+          <h1 class="service-text">EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
           <button type="button" class="service-button">Zamów usługę</button>
         </div>
       </div>
@@ -65,8 +61,8 @@
               </svg>
               <h3 class="info-example-header">LOREM IPSUM</h3>
               <p class="info-example-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </li>
             <li>
@@ -75,8 +71,8 @@
               </svg>
               <h3 class="info-example-header">LOREM IPSUM</h3>
               <p class="info-example-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </li>
             <li>
@@ -85,8 +81,8 @@
               </svg>
               <h3 class="info-example-header">LOREM IPSUM</h3>
               <p class="info-example-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </li>
             <li>
@@ -95,8 +91,8 @@
               </svg>
               <h3 class="info-example-header">LOREM IPSUM</h3>
               <p class="info-example-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
               </p>
             </li>
           </ul>
@@ -137,170 +133,148 @@
       <section class="team-section section">
         <div class="container">
           <h2 class="section-header">Nasz zespół</h2>
-          <div>
-            <ul class="flex-list">
-              <li class="team-card">
-                <img
-                  src="images/team_1.jpg"
-                  alt="Mężczyzna w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-description-name">John Doe</h3>
-                <p class="team-description-spec">Product Designer</p>
-                <ul class="social-link-flex">
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li class="team-card">
-                <img
-                  src="images/team_2.jpg"
-                  alt="Kobieta w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-description-name">John Doe</h3>
-                <p class="team-description-spec">Frontend Developer</p>
-                <ul class="social-link-flex">
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li class="team-card">
-                <img
-                  src="images/team_3.jpg"
-                  alt="Uśmiechnięty mężczyzna"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-description-name">John Doe</h3>
-                <p class="team-description-spec">Marketing</p>
-                <ul class="social-link-flex">
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </li>
-              <li class="team-card">
-                <img
-                  src="images/team_4.jpg"
-                  alt="Mężczyzna w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-description-name">John Doe</h3>
-                <p class="team-description-spec">UI Manager</p>
-                <ul class="social-link-flex">
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="social-link"
-                      ><svg class="social-link-icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+          <ul class="flex-list">
+            <li class="team-card">
+              <img src="images/team_1.jpg" alt="Mężczyzna w okularach" width="270" height="260" />
+              <h3 class="team-description-name">John Doe</h3>
+              <p class="team-description-spec">Product Designer</p>
+              <ul class="social-link-flex">
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="team-card">
+              <img src="images/team_2.jpg" alt="Kobieta w okularach" width="270" height="260" />
+              <h3 class="team-description-name">John Doe</h3>
+              <p class="team-description-spec">Frontend Developer</p>
+              <ul class="social-link-flex">
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="team-card">
+              <img src="images/team_3.jpg" alt="Uśmiechnięty mężczyzna" width="270" height="260" />
+              <h3 class="team-description-name">John Doe</h3>
+              <p class="team-description-spec">Marketing</p>
+              <ul class="social-link-flex">
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="team-card">
+              <img src="images/team_4.jpg" alt="Mężczyzna w okularach" width="270" height="260" />
+              <h3 class="team-description-name">John Doe</h3>
+              <p class="team-description-spec">UI Manager</p>
+              <ul class="social-link-flex">
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="social-link"
+                    ><svg class="social-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="info-section section">
@@ -310,72 +284,65 @@
           <ul class="flex-list">
             <li>
               <a href="#" class="client-box"
-              ><svg class="client-logo">
-                <use href="./images/icons.svg#icon-Client-1"></use>
-              </svg>
-            </a>
+                ><svg class="client-logo">
+                  <use href="./images/icons.svg#icon-Client-1"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="#" class="client-box"
-              ><svg class="client-logo">
-                <use href="./images/icons.svg#icon-Client-2"></use>
-              </svg>
-            </a>
+                ><svg class="client-logo">
+                  <use href="./images/icons.svg#icon-Client-2"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="#" class="client-box"
-              ><svg class="client-logo">
-                <use href="./images/icons.svg#icon-Client-3"></use>
-              </svg>
-            </a>
+                ><svg class="client-logo">
+                  <use href="./images/icons.svg#icon-Client-3"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="#" class="client-box"
-              ><svg class="client-logo">
-                <use href="./images/icons.svg#icon-Client-4"></use>
-              </svg>
-            </a>
+                ><svg class="client-logo">
+                  <use href="./images/icons.svg#icon-Client-4"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="#" class="client-box"
-              ><svg class="client-logo">
-                <use href="./images/icons.svg#icon-Client-5"></use>
-              </svg>
-            </a>
+                ><svg class="client-logo">
+                  <use href="./images/icons.svg#icon-Client-5"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a href="#" class="client-box"
-              ><svg class="client-logo">
-                <use href="./images/icons.svg#icon-Client-6"></use>
-              </svg>
-            </a>
+                ><svg class="client-logo">
+                  <use href="./images/icons.svg#icon-Client-6"></use>
+                </svg>
+              </a>
             </li>
-
           </ul>
         </div>
       </section>
     </main>
     <footer>
       <div class="container">
-          <div>
-            <a href="index.html" class="main-logo"
-              >Web<span class="color-white">Studio</span>
-            </a>
-            <address class="font-normal">
-          <ul>
-            <li class="footer-address">m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-links"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+48 111 111 111" class="footer-links"
-                >+48 111 111 111</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div>
+          <a href="index.html" class="main-logo">Web<span class="color-white">Studio</span> </a>
+          <address class="font-normal">
+            <ul>
+              <li class="footer-address">m. Warszawa, Aleje Jerozolimskie 21</li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-links">info@devstudio.com</a>
+              </li>
+              <li>
+                <a href="tel:+48 111 111 111" class="footer-links">+48 111 111 111</a>
+              </li>
+            </ul>
+          </address>
         </div>
         <div>
           <h3 class="social-link-header">dołącz do nas</h3>
